samples/_failures_safe/1761254201_4a798a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9062ab35.c: In function ‘main’:
./samples/SAFE/__tmp_9062ab35.c:159:33: error: expected ‘)’ at end of input
  159 |                 if (target_level
      |                    ~            ^
      |                                 )
./samples/SAFE/__tmp_9062ab35.c:159:17: error: expected declaration or statement at end of input
  159 |                 if (target_level
      |                 ^~
./samples/SAFE/__tmp_9062ab35.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9062ab35.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9062ab35.c:159:17: error: expected declaration or statement at end of input
